--- a/Federated_Learning_XAI_IoV_MDS/Part_2_Normalized_Data_MDS.ipynb
+++ b/Federated_Learning_XAI_IoV_MDS/Part_2_Normalized_Data_MDS.ipynb
@@ -29,14 +29,61 @@
     "## Table of Contents\n",
     "* [Section 1: Summary of Section Structures](#1-bullet)\n",
     "* [Section 2: Environment Setup](#2-bullet)\n",
-    "* [Section 3: Data Transformation Rules and Steps](#3-bullet)\n",
-    "* [Section 4-1: Generating the final dataset (Method 1 - Euclidean Distance)](#4-1-bullet)\n",
-    "* [Section 4-2: Generated Data Testing (Method 1 - Euclidean Distance)](#4-2-bullet)"
+    "* [Section 3.1: Generating the final dataset (Method 1 - Euclidean Distance)](#3-1-bullet)\n",
+    "* [Section 3.2: Generated Data Testing (Method 1 - Euclidean Distance)](#3-2-bullet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc448dc4",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"1-bullet\"><h3><b>Section 1</b>: Summary of Section Structures</h3></a> \n",
+    "<br>\n",
+    "[Back to Menu](#toc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02db3ab8",
+   "metadata": {},
+   "source": [
+    "<b>Section 1</b>: Summary of Section Structures\n",
+    "<ul>\n",
+    "  <li><b>This Section</b></li>\n",
+    "  <li>Introduces each section's main contents, for a better understanding of readers.</li>\n",
+    "</ul>\n",
+    "\n",
+    "<b>Section 2</b>: Environment Setup\n",
+    "<ul>\n",
+    "  <li>Builds necessary enviroments and installs required tools.</li>\n",
+    "  <li>Load and access datasets.</li>\n",
+    "</ul>\n",
+    "\n",
+    "<b>Section 3-1</b>: Generating the final dataset (Method 1 - Euclidean Distance)\n",
+    "<ul>\n",
+    "  <li>Using the Euclidean distance method to generate a transformed dataset</li>\n",
+    "</ul>\n",
+    "\n",
+    "<b>Section 3-2</b>: Generated Data Testing (Method 1 - Euclidean Distance)\n",
+    "<ul>\n",
+    "  <li>Inspections and data cleaning of the Section 3-1 generated dataset.</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "988d80d1",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"2-bullet\"><h3><b>Section 2</b>: Environment Setup</h3></a> \n",
+    "<br>\n",
+    "[Back to Menu](#toc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "5bc4b62e",
    "metadata": {},
    "outputs": [
@@ -101,6 +148,16 @@
    ],
    "source": [
     "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c4042e2",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"3-1-bullet\"><h3><b>Section 3.1</b>: Generating the final dataset (Method 1 - Euclidean Distance)</h3></a> \n",
+    "<br>\n",
+    "[Back to Menu](#toc)"
    ]
   },
   {
@@ -180,6 +237,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9685a8bf",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"3-2-bullet\"><h3><b>Section 3.2</b>: Generated Data Testing (Method 1 - Euclidean Distance)</h3></a> \n",
+    "<br>\n",
+    "[Back to Menu](#toc)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "99a4fe6d",
@@ -201,8 +268,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7fb0e4d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          type  sendTime  sender  senderPseudo  messageID  class   posx  \\\n",
+      "0        False     False   False         False      False  False  False   \n",
+      "1        False     False   False         False      False  False  False   \n",
+      "2        False     False   False         False      False  False  False   \n",
+      "3        False     False   False         False      False  False  False   \n",
+      "4        False     False   False         False      False  False  False   \n",
+      "...        ...       ...     ...           ...        ...    ...    ...   \n",
+      "3194803  False     False   False         False      False  False  False   \n",
+      "3194804  False     False   False         False      False  False  False   \n",
+      "3194805  False     False   False         False      False  False  False   \n",
+      "3194806  False     False   False         False      False  False  False   \n",
+      "3194807  False     False   False         False      False  False  False   \n",
+      "\n",
+      "          posy   posz  posx_n  ...   aclz  aclx_n  acly_n  aclz_n   hedx  \\\n",
+      "0        False  False   False  ...  False   False   False   False  False   \n",
+      "1        False  False   False  ...  False   False   False   False  False   \n",
+      "2        False  False   False  ...  False   False   False   False  False   \n",
+      "3        False  False   False  ...  False   False   False   False  False   \n",
+      "4        False  False   False  ...  False   False   False   False  False   \n",
+      "...        ...    ...     ...  ...    ...     ...     ...     ...    ...   \n",
+      "3194803  False  False   False  ...  False   False   False   False  False   \n",
+      "3194804  False  False   False  ...  False   False   False   False  False   \n",
+      "3194805  False  False   False  ...  False   False   False   False  False   \n",
+      "3194806  False  False   False  ...  False   False   False   False  False   \n",
+      "3194807  False  False   False  ...  False   False   False   False  False   \n",
+      "\n",
+      "          hedy   hedz  hedx_n  hedy_n  hedz_n  \n",
+      "0        False  False   False   False   False  \n",
+      "1        False  False   False   False   False  \n",
+      "2        False  False   False   False   False  \n",
+      "3        False  False   False   False   False  \n",
+      "4        False  False   False   False   False  \n",
+      "...        ...    ...     ...     ...     ...  \n",
+      "3194803  False  False   False   False   False  \n",
+      "3194804  False  False   False   False   False  \n",
+      "3194805  False  False   False   False   False  \n",
+      "3194806  False  False   False   False   False  \n",
+      "3194807  False  False   False   False   False  \n",
+      "\n",
+      "[3194808 rows x 30 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "null_df = df.isnull()\n",
+    "print(null_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b114a70f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type            0\n",
+      "sendTime        0\n",
+      "sender          0\n",
+      "senderPseudo    0\n",
+      "messageID       0\n",
+      "class           0\n",
+      "posx            0\n",
+      "posy            0\n",
+      "posz            0\n",
+      "posx_n          0\n",
+      "posy_n          0\n",
+      "posz_n          0\n",
+      "spdx            0\n",
+      "spdy            0\n",
+      "spdz            0\n",
+      "spdx_n          0\n",
+      "spdy_n          0\n",
+      "spdz_n          0\n",
+      "aclx            0\n",
+      "acly            0\n",
+      "aclz            0\n",
+      "aclx_n          0\n",
+      "acly_n          0\n",
+      "aclz_n          0\n",
+      "hedx            0\n",
+      "hedy            0\n",
+      "hedz            0\n",
+      "hedx_n          0\n",
+      "hedy_n          0\n",
+      "hedz_n          0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "null_counts = df.isnull().sum()\n",
+    "print(null_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3fe022b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Records Duplications: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "duplicate_record = df.duplicated().sum()\n",
+    "\n",
+    "print(\"Total Records Duplications: \" + str(duplicate_record))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e97cfe7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicated messageID Rows: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "duplicate_rows = df.duplicated(subset=['messageID']).sum()\n",
+    "\n",
+    "print(\"Duplicated messageID Rows: \" + str(duplicate_rows))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1230cb29",
    "metadata": {},
    "outputs": [],
    "source": []
